BUG-1001: Remove z-index from resetbutton

--- a/core/src/zeit/find/browser/resources/find.css
+++ b/core/src/zeit/find/browser/resources/find.css
@@ -36,7 +36,6 @@
   height: 15px;
   position: absolute;
   background-color: #ccc;
-  z-index: 1;
   right: 35px;
   top: 0;
   bottom: 0;
